--- a/src/App.css
+++ b/src/App.css
@@ -80,14 +80,14 @@
 /* my css */
 .container {
   margin: 20px;
-  background-color: aliceblue;
+  background-color: rgb(153, 207, 255);
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
 }
 
 .character {
-  background-color: darkkhaki;
+  background-color: rgb(189, 183, 107);
   display: flex;
   justify-content: space-between;
   padding: 2rem;
@@ -106,6 +106,10 @@
 
 .liked {
   background-color: aqua;
+}
+
+h1 {
+  color: yellow;
 }
 
 h1,
